# uncertainty-jnr

./: .gitignore  README.md  config.py  eval_jr_nr_test.py  eval_parseq_direct.py  evaluate_unseen.py  pyproject.toml  train.py
configs/: final.yaml  small16_final_dataset.yaml  small16_final_dataset_v2.yaml  stn.yaml
scripts/: eval_jr_nr_test.py  eval_parseq_direct.py  evaluate_unseen.py  train.py
src/uncertainty_jnr/: augmentation.py  data.py  datasets.py  inference.py  loss.py  model.py  preprocessing.py  stn_model.py
