[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poe.tasks]
precommit-install = {shell = "pre-commit install"}

[tool.poetry]
authors = ["ehzawad"]
description = "Uncertainty-aware jersey number recognition"
license = "CC-BY-SA-4.0"
name = "uncertainty_jnr"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1.26.0"
scipy = "^1.11.3"
matplotlib = ">=3.1.3"
pandas = "^2.1.0"
pydantic = "^2.7.0"
pandera = "~0.20.4"
python = "^3.12"
hydra-colorlog = "1.2.0"
hydra-core = "1.3.2"
omegaconf = ">=2.1"
opencv-contrib-python = "^4.7"
opencv-python = "^4.7"
numba = "^0.60.0"
ipykernel = "^6.29.5"
plotly = "^5.24.1"
rich = "^13.9.2"
albumentations = "^1.4.21"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
pyarrow = "^18.0.0"


[tool.poetry.group.mldev.dependencies]
google-api-core = "^2.21.0"
google-cloud = "^0.34.0"
google-cloud-storage = "^2.11.0"
google-cloud-core = "^2.4.1"
lightning = "2.4.0"
neptune-client = ">=0.16.16"

[tool.poetry.group.torch.dependencies]
torch = {source = "torch+cu124", version = "2.4.1+cu124"}
torchvision = {source = "torch+cu124", version = "0.19.1+cu124"}
timm = "^1.0.11"
torchdiffeq = "0.2.4"
flow_matching = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.7"
flake8 = "^7.0"
flake8-bugbear = "^24.0"
freezegun = ">=1.2.2"
isort = "5.10.1"
jupyterlab = ">=3.0.0"
pre-commit = ">=2.8.2"
pre-commit-hooks = "3.3.0"
pytest = ">=7.1"
pytest-mock = ">=3.8"
toml-sort = ">=0.20.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torch+cu124"
priority = "explicit"
url = "https://download.pytorch.org/whl/cu124"

[tool.tomlsort]
all = true
check = false
ignore_case = true
in_place = true
no_header = false
